2007-05-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file:
	* gaupol/gtk/dialogs/file/test:
	Set svn:ignore properties.

2007-05-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	Remove obsolete entries.

	* data/glade/encoding-dialog.glade:
	* data/glade/language-dialog.glade:
	* data/glade/preferences-dialog.glade:
	* data/glade/previewerr-dialog.glade:
	Set dialog position.
	Remove unnecessary combo box items.

	* data/glade/open-dialog.glade:
	* data/glade/save-dialog.glade:
	New files to replace open-box.glade and save-box.glade.

	* gaupol/gtk/dialogs/file:
	* gaupol/gtk/dialogs/file/append.py:
	* gaupol/gtk/dialogs/file/__init__.py:
	* gaupol/gtk/dialogs/file/open.py:
	* gaupol/gtk/dialogs/file/save.py:
	* gaupol/gtk/dialogs/file/subtitle.py:
	* gaupol/gtk/dialogs/file/video.py:
	New files for file dialogs.

	* gaupol/gtk/dialogs/language.py:
	* gaupol/gtk/dialogs/preferences.py:
	Minor changes.

2007-05-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/preferences-dialog.glade:
	* gaupol/gtk/dialogs/preferences.py:
	Use gtk.Alignments to indent sections.
	Remove undo limiting and level preferences.

2007-05-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	Set 6 pixel margins to the text view.

	* gaupol/gtk/dialogs/debug.py:
	Clean up code.

2007-05-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/language.py:
	Fix tree view sorting.

2007-05-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/encoding-dialog.glade:
	Save with Glade 3.

	* gaupol/enclib.py (get_description):
	Add missing method.

	* gaupol/gtk/dialogs/encoding.py:
	Add contracts and clean up code.

2007-05-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/previewerr-dialog.glade:
	Set 6 pixel margins to the text view.

	* gaupol/gtk/dialogs/previewerr.py:
	Use util.get_text_view_size.

	* gaupol/gtk/util.py (get_text_view_size):
	Add font argument with a blank default value.
